fix alignment

--- a/css/style.css
+++ b/css/style.css
@@ -87,6 +87,7 @@ img {
 
     display: flex;
     justify-content: center;
+    align-items: center;
     flex-direction: column;
 }
 
